# kasual-desktop

./: .gitignore  Makefile  README.md  UX.md  apps.yml  apps_folder.md  arch.md  bug_scenario.md  desktop.py  domain_leaks.md  gamepad_watcher.py  home_overlay.py  infra_refactor.md  install.sh  kasual.ps1  kasual.sh  layershell_plan.md  main.py  nfpm.yaml  packages_org.md  pad_coreading.md  pyproject.toml  refactor_1.md  refactor_2.md  refactor_3.md  refactor_4.md  refactor_5.md  requirements-windows.txt  requirements.txt  run.sh  test.ps1  test.sh  test_actions.py  todo.md  ux_plan.md  vigembus_hidhide.md  volume_overlay.py  windows_plan.md  windows_plan_2.md  windows_tests.md
fonts/: README.md
locale/: kasual_en.ts  kasual_pl.qm  kasual_pl.ts
packaging/: kasual-desktop  kasual-desktop.desktop
src/: app.py  app_manager.py  application.py  confirm_dialog.py  desktop.py  home_overlay.py  log_viewer.py  log_viewer_main.py  main.py  ports.py  styles.py  version.py  volume_overlay.py  window_manager.py  windows_main.py
tests/: conftest.py  test_app_catalog.py  test_app_config.py  test_app_discovery.py  test_app_lifecycle.py  test_app_manager.py  test_app_pinning.py  test_app_tile.py  test_application.py  test_brightness.py  test_brightness_control.py  test_brightness_overlay.py  test_confirm_dialog.py  test_deferred_hide.py  test_desktop_coordinator.py  test_desktop_escape.py  test_desktop_lifecycle.py  test_desktop_state.py  test_direction_repeat.py  test_domain_app.py  test_domain_window.py  test_driver_probe.py  test_event_emitter.py  test_foreground.py  test_gamepad_watcher.py  (+74 more)
(+342 files in other folders)
