# Project metadata — primarily to document the supported Python range.
#
# Kasual Desktop is NOT installed as a pip package: it runs against the system
# Qt/PyQt6 (see the README), so there is deliberately no [build-system] and no
# dependency list here — runtime deps are distro packages, declared in nfpm.yaml
# (the .deb/.rpm/.pkg) and installed for development by install.sh. This file
# exists so the minimum Python version is declared in one conventional,
# tool-readable place (and the Makefile reads the package version from it).
#
# Floor is 3.11: the domain layer uses enum.StrEnum (added in 3.11) and
# typing.Self.
[project]
name = "kasual-desktop"
version = "0.1.0"
description = "Gamepad-first launcher/desktop for KDE Plasma 6 on Wayland."
requires-python = ">=3.11"
